--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ h1, h2, h3, p{
     font-weight: lighter;
 }
 
+.active-page{
+    background-color: var(--section-bg-color-light);
+}
 
 .header{
     margin-top: 0;
@@ -155,6 +158,7 @@ h1, h2, h3, p{
     top: 2vw;
     z-index: 1000;
     padding: 0 10vw 0 10vw;
+    border-bottom: 1px solid rgb(0, 0, 0, 0.1);
 }
 
 .navbar .nav-left img{
@@ -627,13 +631,13 @@ h1, h2, h3, p{
     }
 }
 
-.doctor .doctor-left img:hover{
-    scale: 1.1;
-    opacity: 1;
+.doctor .doctor-left a{
+    transition: 0.3s ease-in-out;
 }
 
-.doctor .doctor-left img:active{
-    scale: 0.8;
+.doctor .doctor-left a:hover{
+    scale: 1.1;
+    opacity: 1;
 }
 
 .doctor .doctor-right h1, .doctor .doctor-right p{
